fix: fixed css z-index issue

--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -98,7 +98,7 @@
 		max-width: 480px;
 		width: 100%;
 		height: 100%;
-		z-index: 15;
+		z-index: 13;
 	}
 
 	&__content-container {
@@ -116,7 +116,7 @@
 		min-height: 775px;
 		transition: opacity 250ms ease 0s;
 		text-align: center;
-		z-index: 16;
+		z-index: 14;
 	}
 
 	&__subtext-container {
